tests/baselines/reference/moduleResolutionPackageIdWithRelativeAndAbsolutePath.errors.txt
/project/tsconfig.json(3,9): error TS5101: Option 'baseUrl' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
  Visit https://aka.ms/ts6 for migration information.


==== /project/tsconfig.json (1 errors) ====
    {
        "compilerOptions": {
            "baseUrl": ".",
            ~~~~~~~~~
!!! error TS5101: Option 'baseUrl' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
!!! error TS5101:   Visit https://aka.ms/ts6 for migration information.
            "paths": {
                "@shared/*": ["../shared/*"]
            }
        },
       //"files": ["src/app.ts"]
    }
==== /project/src/app.ts (0 errors) ====
    import * as t from "anotherLib"; // Include the lib that recursively includes option as relative module resolution in this directory
    import { makeSharedOption } from "@shared/lib/app"; // Includes option as module in shared folder but as module in node_modules folder
    
==== /shared/node_modules/troublesome-lib/package.json (0 errors) ====
    {
        "name": "troublesome-lib",
        "version": "1.17.1"
    }
==== /shared/node_modules/troublesome-lib/lib/Compactable.d.ts (0 errors) ====
    import { Option } from './Option';
    export class Compactable {
        option: Option;
    }
==== /shared/node_modules/troublesome-lib/lib/Option.d.ts (0 errors) ====
    export class Option {
        someProperty: string;
    }
==== /shared/lib/app.d.ts (0 errors) ====
    import { Option } from "troublesome-lib/lib/Option";
    export class SharedOption extends Option { }
    export const makeSharedOption: () => SharedOption;
==== /project/node_modules/anotherLib/index.d.ts (0 errors) ====
    import { Compactable } from "troublesome-lib/lib/Compactable"; // Including this will resolve Option as relative through the imports of compactable
==== /project/node_modules/troublesome-lib/package.json (0 errors) ====
    {
        "name": "troublesome-lib",
        "version": "1.17.1"
    }
==== /project/node_modules/troublesome-lib/lib/Compactable.d.ts (0 errors) ====
    import { Option } from './Option';
    export class Compactable {
        option: Option;
    }
==== /project/node_modules/troublesome-lib/lib/Option.d.ts (0 errors) ====
    export class Option {
        someProperty: string;
    }